[package]
name = "flags"
version = "0.1.3"
authors = ["M Farkas-Dyck <strake888@gmail.com>"]
license = "MIT/Apache-2.0"
keywords = ["bit", "bitmask", "bitflags", "flags"]
categories = ["no-std"]
description = """
A macro to generate structures which behave like bitflags.
"""

[lib]
name = "bitflags"

[features]
default = []
example_generated = []

[package.metadata.docs.rs]
features = [ "example_generated" ]

[workspace]
members = ["test_suite"]
